--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             </div>
                         </div>
                     </div></div>
-                    <!-- Call to action-->
+                    <!-- Call to actiongg-->
                     <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
                         <div class="container">
                         <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
