--- a/about.html
+++ b/about.html
@@ -36,7 +36,9 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
                         </ul>
