--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>The Portfolio of Bryan Pierre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -36,7 +36,9 @@
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -47,32 +49,32 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Our Work</h1>
-                        <p class="lead fw-normal text-muted mb-0">Company portfolio</p>
+                        <h1 class="fw-bolder">My Work</h1>
+                        <p class="lead fw-normal text-muted mb-0">Personal Portfolio</p>
                     </div>
                     <div class="row gx-5">
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/Cacoo-8-must-see-wireframes-680x450.jpeg" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item.html">Wireframes</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/AdobeStock_348397404_Cropped_1500x850-1024x580.jpg" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item copy.html">VS Code</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/60aee9ab16947b2d39b4093f_10-best-wireframe-tools-for-designers-2021_BlogHero_R2.png" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item copy 2.html">Website Draft</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/maxresdefault.jpeg" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link">Next Project Coming Soon</a>
                             </div>
                         </div>
                     </div>
@@ -81,7 +83,7 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-lg btn-primary" href="#!">Contact us</a>
+                    <a class="btn btn-lg btn-primary" href="contact.html">Contact Me</a>
                 </div>
             </section>
         </main>
