finally it's here

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                                 <form id="contactForm" netlify>
                                 <div class="input-group mb-2">
                                     <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                    <button class="btn btn-outline-light" id="email" type="button">Sign up</button>
+                                    <!-- <button class="btn btn-outline-light" id="email" type="button">Sign up</button> -->
+                                    <input class="btn btn-outline-dark" type="submit" value="Submit">
                                 </div>
                                 <div class="small text-white-50">We care about privacy, and will never share your data.</div>
                             </form>
