--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>The Portfolio of Bryan Pierre</title>
+        <title>Portfolio of Bryan Pierre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/customcss.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -55,25 +56,26 @@
                     <div class="row gx-5">
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/Cacoo-8-must-see-wireframes-680x450.jpeg" alt="..." />
+                                <div class="portfolio-bg" style="background: url(assets/Cacoo-8-must-see-wireframes-680x450.jpeg);"></div> 
+                                <img class="img-fluid rounded-3 mb-3 max-ht-500 hide" src="assets/Cacoo-8-must-see-wireframes-680x450.jpeg" alt="..." />
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item.html">Wireframes</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/AdobeStock_348397404_Cropped_1500x850-1024x580.jpg" alt="..." />
+                                <div class="portfolio-bg" style="background: url(assets/istockphoto-1224500457-612x612.jpeg);"></div> 
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item copy.html">VS Code</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5 mb-lg-0">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/60aee9ab16947b2d39b4093f_10-best-wireframe-tools-for-designers-2021_BlogHero_R2.png" alt="..." />
+                                <div class="portfolio-bg" style="background: url(assets/how-to-create-a-wireframe-header@2x.avif);"></div> 
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item copy 2.html">Website Draft</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/maxresdefault.jpeg" alt="..." />
+                                <div class="portfolio-bg" style="background: url(assets/Cacoo-8-must-see-wireframes-680x450.jpeg);"></div> 
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link">Next Project Coming Soon</a>
                             </div>
                         </div>
