--- a/portfolio-item copy 2.html
+++ b/portfolio-item copy 2.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>The Portfolio of Bryan Pierre</title>
+        <title>Portfolio of Bryan Pierre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/customcss.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -58,8 +59,8 @@
                     </div>
                     <div class="row gx-5">
                         <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="assets/Draft1.png" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="assets/Frame2.png" alt="..." /></div>
-                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="assets/style-guide.png" alt="..." /></div>
+                        <div class="col-lg-6 text-center"><img class="img-fluid rounded-3 mb-5 max-ht-500" src="assets/Frame2-resize.jpg" alt="..." /></div>
+                        <div class="col-lg-6 text-center"><img class="img-fluid rounded-3 mb-5 max-ht-500" src="assets/style-guide-resized.jpg" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
