--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <div class="text-white-50">Sign up & Download my Resume</div>
                             </div>
                             <div class="ms-xl-4">
-                                <form id="contactForm" netlify>
+                                <form id="resumeForm" netlify>
                                 <div class="input-group mb-2">
                                     <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
                                     <!-- <button class="btn btn-outline-light" id="email" type="button">Sign up</button> -->
