--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">VS Code</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
@@ -66,6 +66,7 @@
                                 <!-- to get an API token!-->
         <!-- Core theme CSS (includes Bootstrap)-->
                                 <form id="contactForm" netlify>
+                                    <form name="contact" method="POST" data-netlify="true" id="contactForm" netlify></form>>
                                     <!-- Name input-->
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
