--- a/portfolio-item copy.html
+++ b/portfolio-item copy.html
@@ -37,7 +37,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy.html">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
@@ -64,9 +64,9 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
+                                <p class="lead fw-normal text-muted">Interested in hearing the story behind the design? </p>
                                 <a class="text-decoration-none" href="#!">
-                                    View project
+                                    Check Out My Youtube Channel
                                     <i class="bi-arrow-right"></i>
                                 </a>
                             </div>
