--- a/portfolio-item copy 2.html
+++ b/portfolio-item copy 2.html
@@ -38,7 +38,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
@@ -63,6 +63,7 @@
                         <div class="col-lg-6 text-center"><img class="img-fluid rounded-3 mb-5 max-ht-500" src="assets/style-guide-resized.jpg" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
+                        <!-- Pre-footer bottom -->
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
                                 <p class="lead fw-normal text-muted">Interested in hearing the story behind the design? </p>
