--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -38,7 +38,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy.html">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
@@ -64,7 +64,7 @@
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
                                 <div class="portfolio-bg" style="background: url(assets/istockphoto-1224500457-612x612.jpeg);"></div> 
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="portfolio-item copy.html">VS Code</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link"  href="https://github.com/Rednave720">GitHub</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative">
-                                <div class="portfolio-bg" style="background: url(assets/Cacoo-8-must-see-wireframes-680x450.jpeg);"></div> 
+                                <div class="portfolio-bg" style="background: url(assets/what-is-a-wireframe-header@2x.png);"></div> 
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link">Next Project Coming Soon</a>
                             </div>
                         </div>
