--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
         <!-- Core theme CSS (includes Bootstrap)-->
-        <form id="contactForm" netlify> <form name="contact" method="POST" data-netlify="true">
+        <form id="contactForm" method="post" name="contactform" netlify>
             <!-- Name input-->
             <div class="form-floating mb-3">
                 <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
