--- a/contact.html
+++ b/contact.html
@@ -64,51 +64,49 @@
                                 <!-- To make this form functional, sign up at-->
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
-                                <form method="post" name="contactform" action="/thankyou.html" id="myForm" netlify ref="formTag" >
-                                    <p>
-                                        <label for="name">Name:</label>
-                                        <input type="text" name="name" id="name" v-model="name">
-                                    </p>
-                                    <p>
-                                        <label for="email">Email:</label>
-                                        <input type="email" name="email" id="email" v-model="email">
-                                    </p>
-                                    <p>
-                                        <label for="comments">Comments:</label><br/>
-                                        <textarea name="comments" id="comments" v-model="comments"></textarea>
-                                    </p>
-                                    <p>
-                                        <input type="submit" @click.prevent="sendForm">
-                                    </p>
-                                    </form>
-                                <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-                                <script>
-                                const app = new Vue({
-                                    el:'#myForm',
-                                    data:{
-                                        name:'',
-                                        email:'',
-                                        comments:''
-                                    },
-                                    methods:{
-                                        async sendForm() {
-                                            let formName = this.$refs.formTag.getAttribute('name');
-                                        
-                                            let formData = new FormData();
-                                            formData.append('name', this.name);
-                                            formData.append('email', this.email);
-                                            formData.append('comments', this.comments);
-                                            formData.append('form-name', formName);
-                                            let resp = await fetch('/', {
-                                                method:'POST',
-                                                body:formData
-                                            });
-                                            // assume ok, although double check
-                                            alert('Submitted!');
-                                        }
-                                    }
-                                });
-                                </script>
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <form id="contactForm" netlify>
+            <!-- Name input-->
+            <div class="form-floating mb-3">
+                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                <label for="name">Full name</label>
+                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+            </div>
+            <!-- Email address input-->
+            <div class="form-floating mb-3">
+                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+                <label for="email">Email address</label>
+                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+            </div>
+            <!-- Phone number input-->
+            <div class="form-floating mb-3">
+                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
+                <label for="phone">Phone number</label>
+                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+            </div>
+            <!-- Phone number input-->
+            <div class="form-floating mb-3">
+                <select class="form-control">
+                    <option value="General Inquiry">General Inquiry</option>
+                    <option value="General Inquiry">General Inquiry</option>
+                    <option value="General Inquiry">General Inquiry</option>
+                    <option value="General Inquiry">General Inquiry</option>
+                </select>
+                <label for="phone">Subject</label>
+                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+            </div>
+            <!-- Message input-->
+            <div class="form-floating mb-3">
+                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
+                <label for="message">Message</label>
+                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+            </div>
+            <!-- Submit error message-->
+            <!---->
+            <!-- This is what your users will see when there is-->
+            <!-- an error submitting the form-->
+            <input type="submit" value="Submit">
         </form>
                             </div>
                         </div>
