--- a/contact.html
+++ b/contact.html
@@ -65,10 +65,10 @@
                                 <!-- https://startbootstrap.com/solution/contact-forms-->
                                 <!-- to get an API token!-->
         <!-- Core theme CSS (includes Bootstrap)-->
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
             <!-- Name input-->
             <div class="form-floating mb-3">
-                <input id="name" type="text" placeholder="Enter your name...">
+                <input id="name" type="text" placeholder="Enter your name..." name="name">
                 <label for="name">Full name</label>
             </div>
             <!-- Email address input-->
