--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             <!-- Email address input-->
             <div class="form-floating mb-3">
                 <input class="form-control" type="text" placeholder="Enter your email..." data-sb-validations="required" email="email" />
-                <label for="name">Full email</label>
+                <label for="email">Full email</label>
                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
             </div>
             <!-- Phone number input-->
