--- a/contact.html
+++ b/contact.html
@@ -74,17 +74,17 @@
             </div>
             <!-- Email address input-->
             <div class="form-floating mb-3">
-                <input class="form-control" type="text" placeholder="Enter your email..." data-sb-validations="required" email="email" />
+                <input class="form-control" type="email" placeholder="Enter your email..." data-sb-validations="required" email="email" />
                 <label for="email">Full email</label>
                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
             </div>
             <!-- Phone number input-->
             <div class="form-floating mb-3">
-                <input class="form-control" type="text" placeholder="Enter your name..." data-sb-validations="required" name="name" />
+                <input class="form-control" type="phone" placeholder="Enter your name..." data-sb-validations="required" name="name" />
                 <label for="name">Full name</label>
                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
             </div>
-            <!-- Submit error message-->
+            <!-- Submit error message I'm typing to see when I can commit next weirdly enough-->
             <!---->
             <!-- This is what your users will see when there is-->
             <!-- an error submitting the form-->
