--- a/contact.html
+++ b/contact.html
@@ -74,15 +74,9 @@
             </div>
             <!-- Email address input-->
             <div class="form-floating mb-3">
-                <input class="form-control" type="email" placeholder="Enter your email..." data-sb-validations="required" email="email" />
+                <input class="form-control" type="email" placeholder="Enter your email..." data-sb-validations="required" name="email" />
                 <label for="email">Full email</label>
                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-            </div>
-            <!-- Phone number input-->
-            <div class="form-floating mb-3">
-                <input class="form-control" type="phone" placeholder="Enter your name..." data-sb-validations="required" name="name" />
-                <label for="name">Full name</label>
-                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
             </div>
             <!-- Submit error message I'm typing to see when I can commit next weirdly enough-->
             <!---->
