--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,12 @@
                     <option value="General Inquiry">General Inquiry</option>
                     <option value="General Inquiry">General Inquiry</option>
                 </select>
+                <!-- Message input-->
+                <div class="form-floating mb-3">
+                    <textarea class="form-control" type="message" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required" name="message"></textarea>
+                    <label for="message">Message</label>
+                    <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                </div>
             <!-- Submit error message I'm typing to see when I can commit next weirdly enough-->
             <!---->
             <!-- This is what your users will see when there is-->
