--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@
                     <option value="General Inquiry">General Inquiry</option>
                     <option value="General Inquiry">General Inquiry</option>
                 </select>
+                </div>
                 <!-- Message input-->
                 <div class="form-floating mb-3">
                     <textarea class="form-control" type="message" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required" name="message"></textarea>
@@ -103,7 +104,7 @@
             <!---->
             <!-- This is what your users will see when there is-->
             <!-- an error submitting the form-->
-            <button type="submit">Send</button>
+            <button class="btn btn-outline-dark" type="submit">Send</button>
         </p>
       </form>
                             </div>
