--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
                                 <div class="text-white-50">Sign up & Download my Resume</div>
                             </div>
                             <div class="ms-xl-4">
-                                <form id="resumeForm" netlify>
+                                <form name="resumeForm" method="POST" data-netlify="true"></form>
                                 <div class="input-group mb-2">
-                                    <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+                                    <input class="form-control" type="email" placeholder="name@example.com" data-sb-validations="required,email" name="email" />
                                     <!-- <button class="btn btn-outline-light" id="email" type="button">Sign up</button> -->
-                                    <input class="btn btn-outline-dark" type="submit" value="Submit">
+                                    <input class="btn btn-outline-dark" type="submit">
                                 </div>
                                 <div class="small text-white-50">We care about privacy, and will never share your data.</div>
                             </form>
