--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <div class="input-group mb-2">
                                     <input class="form-control" type="email" placeholder="name@example.com" data-sb-validations="required,email" name="email" />
                                     <!-- <button class="btn btn-outline-light" id="email" type="button">Sign up</button> -->
-                                    <button class="btn btn-outline-dark" type="submit" value="submit"></button>
+                                    <button class="btn btn-outline-dark" type="submit">Sign Up</button>
                                 </div>
                                 <div class="small text-white-50">We care about privacy, and will never share your data.</div>
                             </form>
