--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -37,7 +37,7 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy.html">GitHub</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
                                 </ul>
                             </li>
