Minor Updates Oct

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/IMG_1866.JPG" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">My Story</h2>
-                            <p class="lead fw-normal text-muted mb-0"> I've always been intrigued by web design & user experience. My passion in the field lead me to studying how websites work on my free time fresh out of high-school. Going from a user to a designer has been an amazing experience.</p>
+                            <p class="lead fw-normal text-muted mb-0"> I've always been intrigued by web design & user experience. I vividly remember winning my first hackathon as the moment that let me know that I could excel in the field.  My passion in the field lead me to studying how websites work on my free time fresh out of high-school. Going from a user to a designer has truly been an amazing experience.</p>
                         </div>
                     </div>
                 </div>
@@ -108,14 +108,14 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/JohnnyAvatar.jpg" alt="..." />
                                 <h5 class="fw-bolder">Johnny Ruiz</h5>
-                                <div class="fst-italic text-muted">Real Estate Team Lead, Centre Realty Group</div>
+                                <div class="fst-italic text-muted">Associate Executive Director, Climable.org</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Jen2Bheadshot.jpg" alt="..." />
-                                <h5 class="fw-bolder">Nabil Alabed</h5>
-                                <div class="fst-italic text-muted">Real Estate Team Lead, Centre Realty Group</div>
+                                <h5 class="fw-bolder">Jen Stevenson Zepeda</h5>
+                                <div class="fst-italic text-muted">Associate Director, Climable.org</div>
                             </div>
                         </div>
                     </div>
