--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">VS Code</a></li>
-                                    <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">GitHub></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Drafts</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -128,7 +128,7 @@
                                 <img class="card-img-top" src="assets/Cacoo-8-must-see-wireframes-680x450.jpeg" alt="..." />
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Wireframes</h5></a>
+                                    <a class="text-decoration-none link-dark stretched-link" href="portfolio-item.html"><h5 class="card-title mb-3">Wireframes</h5></a>
                                     <p class="card-text mb-0">View a few of my previous wireframes and templates ready to go for live testing or prototyping</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -146,7 +146,7 @@
                                 <img class="card-img-top" src="assets/AdobeStock_348397404_Cropped_1500x850-1024x580.jpg" alt="..." />
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">VS Code</h5></a>
+                                    <a class="text-decoration-none link-dark stretched-link" href="https://github.com/Rednave720"><h5 class="card-title mb-3">GitHub</h5></a>
                                     <p class="card-text mb-0">View the formula behind the magic, the code that makes everything possible and dreams come true. Anything is possible with the right implementation</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -164,7 +164,7 @@
                                 <img class="card-img-top" src="assets/what-is-a-wireframe-header@2x.png" alt="..." />
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Website Draft</h5></a>
+                                    <a class="text-decoration-none link-dark stretched-link" href="portfolio-item copy 2.html"><h5 class="card-title mb-3">Website Draft</h5></a>
                                     <p class="card-text mb-0">View my drafts and prototypes that are ready to be altered to fit the vision you have for your website design </p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
