Pre-Figma Update

--- a/portfolio-item copy.html
+++ b/portfolio-item copy.html
@@ -39,6 +39,7 @@
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy.html">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 3.html">Replicate the Let's Encrypt Website</a></li>
                                 </ul>
                             </li>
                         </ul>
