--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -40,6 +40,7 @@
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
                                     <li><a class="dropdown-item" href="https://github.com/Rednave720">GitHub</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 3.html">Replicate the Let's Encrypt Website</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -76,7 +77,7 @@
                         <div class="col-lg-6">
                             <div class="position-relative">
                                 <div class="portfolio-bg" style="background: url(assets/what-is-a-wireframe-header@2x.png);"></div> 
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link">Next Project Coming Soon</a>
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="portfolio-item copy 3.html">Replicate the Let's Encrypt Website</a>
                             </div>
                         </div>
                     </div>
