--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,9 @@
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
                                     <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item.html">Wireframes</a></li>
-                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">VS Code</a></li>
+                                    <li><a class="dropdown-item" href="https://github.com/Rednave720">Github</a></li>
                                     <li><a class="dropdown-item" href="portfolio-item copy 2.html">Website Draft</a></li>
+                                    <li><a class="dropdown-item" href="portfolio-item copy 3.html">Replicate the Let's Encrypt Website</a></li>
                                 </ul>
                             </li>
                         </ul>
