--- a/portfolio-item copy 4.html
+++ b/portfolio-item copy 4.html
@@ -5,14 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Portfolio of Bryan Pierre</title>
+        <title>The Portfolio of Bryan Pierre</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/customcss.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -53,23 +52,22 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <h1 class="fw-bolder">Website Drafts</h1>
-                                <p class="lead fw-normal text-muted mb-0">1st attempts at making my Portfolio webpage</p>
+                                <h1 class="fw-bolder">Project Title</h1>
+                                <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab similique, ducimus ut alias sit accusamus illum, asperiores deserunt dolorum quaerat qui! Ab, quisquam explicabo magni dolores unde beatae quam a.</p>
                             </div>
                         </div>
                     </div>
                     <div class="row gx-5">
-                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="assets/Draft1.png" alt="..." /></div>
-                        <div class="col-lg-6 text-center"><img class="img-fluid rounded-3 mb-5 max-ht-500" src="assets/Frame2-resize.jpg" alt="..." /></div>
-                        <div class="col-lg-6 text-center"><img class="img-fluid rounded-3 mb-5 max-ht-500" src="assets/style-guide-resized.jpg" alt="..." /></div>
+                        <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
                     </div>
                     <div class="row gx-5 justify-content-center">
-                        <!-- Pre-footer bottom -->
                         <div class="col-lg-6">
                             <div class="text-center mb-5">
-                                <p class="lead fw-normal text-muted">Interested in hearing the story behind the design? </p>
+                                <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
                                 <a class="text-decoration-none" href="#!">
-                                    Check Out My Youtube Channel
+                                    View project
                                     <i class="bi-arrow-right"></i>
                                 </a>
                             </div>
