--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BP5 Linktree</title>
+    <title>Bryan Pierre | Front End Web Designer & Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@300&display=swap" rel="stylesheet">
@@ -118,13 +118,13 @@
     </div>
 </a>
 
-<a href="https://dribbble.com/BP5" class="platform">
+<a href="https://www.behance.net/bryanpierre1" class="platform">
     <div id="Dribbble" class="link">
         <i class="fab fa-behance"></i>
         <p>Screenshots</p>
     </div>
 <a href="mailto:bryan22pierre@gmail.com" class="platform">
-    <div id="Dribbble" class="link">
+    <div id="Email" class="link">
         <i class="fab fa-mail-reply"></i>
         <p>Contact</p>
     </div>
