Instagram Link Update

--- a/BP5 Productions/index.html
+++ b/BP5 Productions/index.html
@@ -111,7 +111,7 @@
     </div>
 </a>
 
-<a href="https://www.instagram.com/bpierre_5/" class="platform">
+<a href="https://www.instagram.com/bryanns.ip/" class="platform">
     <div id="instagram" class="link">
         <i class="fab fa-instagram"></i>
         <p>Instagram</p> 
